--- a/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_4_4_capitalAssetPricingModel.tex
+++ b/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_4_4_capitalAssetPricingModel.tex
@@ -17,7 +17,7 @@ Wir betrachten folgende Kennzahlen.
 	\item Überschussrendite [excess return] (alpha):
 	\begin{equation*}
 		\begin{aligned}
-		\alpha_i &= \EW[R_i] - r \text{für Wertpapier} S^i \\
+		\alpha_i &= \EW[R_i] - r \quad \text{für Wertpapier} S^i \\
 		\alpha_M 
 		&= \EW[R_M] - r = \trans{p_\ast} \mu - r 
 		= \frac{\trans{\mu} \Sigma^{-1} (\mu - r \one)}{\trans{\one} \Sigma^{-1} (\mu - r \one)} - r 
@@ -27,7 +27,7 @@ Wir betrachten folgende Kennzahlen.
 	\end{equation*}
 	\item Beta-Koeffizient:
 	\begin{equation*}
-		\beta_i = \frac{\Cov{R_i}{R_M}}{\Var[R_M]} \text{skalierte Kovarianz zwischen Erträgen von } S^i \und M
+		\beta_i = \frac{\Cov{R_i}{R_M}}{\Var[R_M]} \quad \text{skalierte Kovarianz zwischen Erträgen von } S^i \und M
 	\end{equation*}
 	\begin{itemize}[nolistsep]
 		\item Maß für Korrelation der Wertpapiere $S^i$ und Marktportfolio
@@ -64,7 +64,7 @@ Wir betrachten folgende Kennzahlen.
 
 \textbf{Kritik am CAPM:}
 \begin{itemize}[nolistsep, topsep=-\parskip]
-	\item Regrssion \eqref{eq: capm-star} empirisch im Allgemeinen nicht besonders gut (Fehler $\sum \epsilon_i^2$ groß)
+	\item Regression \eqref{eq: capm-star} empirisch im Allgemeinen nicht besonders gut (Fehler $\sum \epsilon_i^2$ groß)
 	\item Schätzung von $\mu_i$ und $\mu_M$ schwierig
 \end{itemize}
 
@@ -72,7 +72,7 @@ Wir betrachten folgende Kennzahlen.
 
 \textbf{Erweiterungen:}
 \begin{itemize}[nolistsep, topsep=-\parskip]
-	\item Ergänze Schätzer $\dach{\mu}_i$ und $\dach{\mu}_M$ um Expertenmeinungen und Kofidenzaussagen \\
+	\item Ergänze Schätzer $\dach{\mu}_i$ und $\dach{\mu}_M$ um Expertenmeinungen und Konfidenzaussagen \\
 	$\Rightarrow$ Black-Littermann-Modell
 	\item Erweiterung der Regressionsgleichung \eqref{eq: capm-star} um weiter Variablen \\
 	$\Rightarrow$ Fama-French-Modell
