--- a/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_4_5_praeferenzordnungenErwartungsnutzen.tex
+++ b/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_4_5_praeferenzordnungenErwartungsnutzen.tex
@@ -8,16 +8,16 @@
 
 \vspace{\parskip}
 
-\fbox{\textbf{Axiomatischer Zugang:}} Präferenzordnungen (PO)
+\fbox{\textbf{Axiomatischer Zugang:}} Präferenzordnungen (PO) ---
 Sei $(\Omega, \F, \P)$ ein Wahrscheinlichkeitsraum und wie üblich $L_1(\Omega, \F, \P)$ der Raum der integrierbaren Zufallsvariablen. Setze
 \begin{equation*}
 	\mathcal{M} \defeq \text{Menge der Verteilungsfunktionen } F_X \text{ von } X \in L_1(\Omega, \F, \P)
 \end{equation*}
-Seien $X,Y \in L_1(\Omega)$ mit der Interpretation als risikobehaftete Auszahlungen (''Lotterie``) versehen. Wir wollen eine Ordnungsrelation $\leqslant$ mit Bedeutung
+Seien $X,Y \in L_1(\Omega)$ mit der Interpretation als risikobehaftete Auszahlungen (\enquote{Lotterie}) versehen. Wir wollen eine Ordnungsrelation $\unlhd$ mit Bedeutung
 \begin{equation*}
-	X \unlhd Y \equivalent ''Y \text{ wird bevorzugt gegenüber } X``
+	X \unlhd Y \equivalent \text{\enquote{$Y$ wird bevorzugt gegenüber $X$}}
 \end{equation*}
-Wir beschränken uns auf ''verteilungsinvariante`` Präferenzordnungen (unabhängig von der Verteilung), welche durch Relation auf $\mathcal{M}$ erklärt werden, d.h.
+Wir beschränken uns auf \enquote{verteilungsinvariante} Präferenzordnungen (unabhängig von der Verteilung), welche durch Relation auf $\mathcal{M}$ erklärt werden, d.h.
 \begin{equation*}
 	X \unlhd Y \equivalent F_X \unlhd F_Y
 \end{equation*}
@@ -154,7 +154,7 @@ Eine Präferenzordnung kann folgende Eigenschaften besitzen:
 		\begin{equation*}
 			A_U(x) \defeq - \frac{U''(x)}{U'(x)} \qquad R_U(x) \defeq -\frac{x U''(x)}{U'(x)}
 		\end{equation*}
-		die \begriff{\person{Arrow}-\person{Pratt}-Koeffizienten} der absoluten bzw. relativen Riskioaversion.
+		die \begriff{\person{Arrow}-\person{Pratt}-Koeffizienten} der absoluten bzw. relativen Risikoaversion.
 	\end{enumerate}
 \end{*definition}
 
