--- a/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_5_3_risikomasseAxiomatik.tex
+++ b/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_5_3_risikomasseAxiomatik.tex
@@ -27,7 +27,7 @@ als Risikomaße geeignet sind.
 		\end{equation*}
 		\item Es gilt (d) $+$ (e) $\follows$ (c), denn
 		\begin{equation*}
-		\rho(L_1 + L_2) \overset{(d)}{=} 2 * \rho(\frac{L_1}{2} + \frac{L_2}{2}) \overset{(e)}{\le} \rho(L_1) + \rho(L_2)
+		\rho(L_1 + L_2) \overset{(d)}{=} 2 * \rho \brackets{\tfrac{L_1}{2} + \tfrac{L_2}{2}} \overset{(e)}{\le} \rho(L_1) + \rho(L_2)
 		\end{equation*}
 	\end{itemize}
 \end{*bemerkung_inline}
