--- a/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_5_4_verteilteRisiken.tex
+++ b/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_5_4_verteilteRisiken.tex
@@ -6,7 +6,7 @@
 	
 	\begin{itemize}[nolistsep]
 		\item Risiken werden im Allgemeinen auf mehrere Ebenen gemessen
-		\item Risikokennzahlen müssen konsistenz zwischen Ebenen übertragen werden
+		\item Risikokennzahlen müssen konsistent zwischen Ebenen übertragen werden
 	\end{itemize}
 	
 	\item[Schematisch]
@@ -30,10 +30,10 @@
 	
 	\item[Annahme:] 
 	\begin{itemize}[nolistsep]
-		\item[] $\rho$ sei monetär, positiv homogen und verteilungsinvariant
-		\item[] $(L_1, \dots, L_n) \sim \Normal(\mu, \Sigma)$
-		\item[] $\sigma_i^2 = \Var[L_i]$ und $\sigma_L^2 = \Var[L]$
-		\item[] $\rho_{ij} = \Corr{L_i}{L_j}$
+		\item $\rho$ sei monetär, positiv homogen und verteilungsinvariant
+		\item $(L_1, \dots, L_n) \sim \Normal(\mu, \Sigma)$
+		\item $\sigma_i^2 = \Var[L_i]$ und $\sigma_L^2 = \Var[L]$
+		\item $\rho_{ij} = \Corr{L_i}{L_j}$
 	\end{itemize}
 \end{description}
 
