--- a/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_vorlesung_main.tex
+++ b/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_vorlesung_main.tex
@@ -68,6 +68,8 @@
 	\mathrel{\scalebox{#1}[1]{\ensuremath{\sim}}}
 }
 
+\def\upmodels{\perp\!\!\!\perp}
+
 \newlength{\zulength}
 \settowidth{\zulength}{(zu a)}
 \addtolength{\zulength}{1em}
