--- a/Math-Ba-OPTINUM/OPTINUM_1_Vorlesung/optinum_1_3_beispieleDiskreteOptimierung.tex
+++ b/Math-Ba-OPTINUM/OPTINUM_1_Vorlesung/optinum_1_3_beispieleDiskreteOptimierung.tex
@@ -138,4 +138,4 @@ Es sollen $n$ Personen auf $n$ Räume verteilt werden. Person $i$ muss Person $j
 \end{description}
 
 
-Weitere Beispiele sind in der Vorlesung \enquote{Diskrete Optimierung} (Master Mathe) zu finden..
+Weitere Beispiele sind in der Vorlesung \enquote{Diskrete Optimierung} (Master Mathe) zu finden.
