--- a/Math-Ba-OPTINUM/OPTINUM_1_Vorlesung/optinum_2_3_lemmaVonFarkas.tex
+++ b/Math-Ba-OPTINUM/OPTINUM_1_Vorlesung/optinum_2_3_lemmaVonFarkas.tex
@@ -75,7 +75,7 @@ Gerade im Hinblick auf die praktische Anwendbarkeit ist \eqref{eq: 2.8} in der j
 	ist, dann existiert ein Vektor $u$, sodass das Paar $(x,u)$ das folgende System löst:
 	\begin{align}
 		\begin{split}
-		\nabla f(x) + \sum_{i \in I} u_i a_i &= 0 \qquad u_i \ge 0 , \qquad \trans{a_i} - b_i \le 0 \quad (i \in I) \\
+		\nabla f(x) + \sum_{i \in I} u_i a_i &= 0 \qquad u_i \ge 0 , \qquad \trans{a_i} x - b_i \le 0 \quad (i \in I) \\
 		u_i \brackets{\trans{a_i}x - b_i} &= 0 \qquad (i \in I)
 		\end{split} \label{eq: 2.9}
 	\end{align}
