--- a/Math-Ba-OPTINUM/OPTINUM_1_Vorlesung/optinum_3_4_dualitaet.tex
+++ b/Math-Ba-OPTINUM/OPTINUM_1_Vorlesung/optinum_3_4_dualitaet.tex
@@ -12,7 +12,7 @@ Wir betrachten nun die Optimierungsaufgabe
 
 \begin{satz}[Charakterisierungssatz] %3.9
 	\label{satz: 3.9}
-	Ein Punkt $x \in \Rn$ ist genau dann Lösung von (P), wenn ein $\quer{x} \in \Rm$ existiert, sodass insgesamt das folgende System gelöst wird:
+	Ein Punkt $x \in \Rn$ ist genau dann Lösung von (P), wenn ein $\quer{u} \in \Rm$ existiert, sodass insgesamt das folgende System gelöst wird:
 	\begin{equation*}
 		\begin{alignedat}{3}
 			A \quer{x} - b &\le 0 \quad &\quer{x} &\ge 0 \qquad \qquad &(1) \\
