--- a/Math-Ba-OPTINUM/OPTINUM_1_Vorlesung/optinum_3_2_primalesSimplexverfahren.tex
+++ b/Math-Ba-OPTINUM/OPTINUM_1_Vorlesung/optinum_3_2_primalesSimplexverfahren.tex
@@ -189,7 +189,7 @@ Der Austausch von $x_\tau$ und $x_\sigma$ im Simplextableau kann formal durch di
 	\schlange{P}_{\sigma, j} &\defeq - \frac{P_{\sigma, j}}{P_{\sigma, \tau}} \quad (j \in I_N \setminus \menge{\tau}) & \schlange{p}_\sigma &= - \frac{p_\sigma}{P_{\sigma, \tau}} 
 	\tag{Pivotzeile} \\
 	%
-	\schlange{P}_{i, \tau} &\defeq - \frac{P_{i, \tau}}{P_{\sigma, \tau}} \quad (i \in I_B \setminus \menge{\sigma}) & \schlange{q}_\tau &\defeq \frac{q_\tau}{P_{\sigma, \tau}}
+	\schlange{P}_{i, \tau} &\defeq \frac{P_{i, \tau}}{P_{\sigma, \tau}} \quad (i \in I_B \setminus \menge{\sigma}) & \schlange{q}_\tau &\defeq \frac{q_\tau}{P_{\sigma, \tau}}
 	\tag{Pivotspalte} \\
 	%
 	\schlange{P}_{i,j} &\defeq P_{i,j} - \frac{P_{\sigma, j}}{P_{\sigma, \tau}} P_{i,\tau} \quad (i \in I_B \setminus \menge{\sigma} , j \in I_N \setminus \menge{\tau}) 
