--- a/Math-Ba-OPTINUM/OPTINUM_1_Vorlesung/optinum_4_2_methodeBranchBound.tex
+++ b/Math-Ba-OPTINUM/OPTINUM_1_Vorlesung/optinum_4_2_methodeBranchBound.tex
@@ -337,7 +337,7 @@ Für das Problem \eqref{eq: 4.1} -- \eqref{eq: 4.5} kann man auf folgende Weise 
 	\begin{equation*}
 		\begin{alignedat}{3}
 			&u_i &&\defeq \min\menge{c_{ik} : k \in I} \qquad &&(i \in I) \\
-			&v_i &&\defeq \min\menge{c_{ik} - u_i : i \in I} \qquad &&(k \in I) \\
+			&v_k &&\defeq \min\menge{c_{ik} - u_i : i \in I} \qquad &&(k \in I) \\
 			\follows &w_{ik} &&\phantom{:}= c_{ik} - u_i - v_k \ge 0 \qquad &&\forall (i,k) \in I \times I \text{ (duale Zulässigkeit)}
 		\end{alignedat}
 	\end{equation*}
