--- a/Math-Ba-OPTINUM/OPTINUM_1_Vorlesung/optinum_vorlesung_main.tex
+++ b/Math-Ba-OPTINUM/OPTINUM_1_Vorlesung/optinum_vorlesung_main.tex
@@ -114,15 +114,15 @@
 \input{optinum_4_0_intro}
 \input{optinum_4_1_spaltengenerierung}
 \input{optinum_4_2_methodeBranchBound}
-%\input{optinum_4_3_dynamischeOptimierung}
-%\input{optinum_4_4_schnittebenenverfahren}
+\input{optinum_4_3_dynamischeOptimierung}
+\input{optinum_4_4_schnittebenenverfahren}
 %
-%\chapter{Optimierung auf Graphen}
-%\label{chapter_5_optimierungGraphen}
-%\input{optinum_5_0_intro}
-%\input{optinum_5_1_definitionen}
-%\input{optinum_5_2_minimumSpanningTree}
-%\input{optinum_5_3_optimaleWege}
-%\input{optinum_5_4_maximaleFluesse}
+\chapter{Optimierung auf Graphen}
+\label{chapter_5_optimierungGraphen}
+\input{optinum_5_0_intro}
+\input{optinum_5_1_definitionen}
+\input{optinum_5_2_minimumSpanningTree}
+\input{optinum_5_3_optimaleWege}
+\input{optinum_5_4_maximaleFluesse}
 
 \end{document}
